package pa1.containment;

public class Treatment extends Containment {

    public Treatment(int pos) {
        this.name = "teatment";
        this.pos = pos;
    }
}
